--- a/Data/Ui_files/Profile.ui
+++ b/Data/Ui_files/Profile.ui
@@ -149,7 +149,7 @@
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap>../Черновики/no-profile.png</pixmap>
+         <pixmap>../Images/no-profile.png</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
