--- a/Data/Ui_files/Enter.ui
+++ b/Data/Ui_files/Enter.ui
@@ -36,6 +36,9 @@ background-color: rgba(0, 0, 0, 25);
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
+           <property name="sizeType">
+            <enum>QSizePolicy::Fixed</enum>
+           </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>303</width>
@@ -44,29 +47,26 @@ background-color: rgba(0, 0, 0, 25);
            </property>
           </spacer>
          </item>
-         <item>
-          <widget class="QFrame" name="frame_9">
-           <property name="frameShape">
-            <enum>QFrame::StyledPanel</enum>
-           </property>
-           <property name="frameShadow">
-            <enum>QFrame::Raised</enum>
-           </property>
-          </widget>
-         </item>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QFrame" name="frame">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="maximumSize">
          <size>
-          <width>400</width>
-          <height>700</height>
+          <width>16777215</width>
+          <height>16777215</height>
          </size>
         </property>
         <property name="styleSheet">
          <string notr="true">background-color: rgb(255, 255, 255);
+
 </string>
         </property>
         <property name="frameShape">
@@ -108,7 +108,10 @@ background-color: rgba(0, 0, 0, 25);
                <string notr="true">color: rgb(0, 0, 0);</string>
               </property>
               <property name="text">
-               <string>           Double E</string>
+               <string>Double E</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
               </property>
              </widget>
             </item>
@@ -132,25 +135,28 @@ background-color: rgba(0, 0, 0, 25);
                 </widget>
                </item>
                <item>
-                <widget class="QLineEdit" name="lineEdit_2">
-                 <property name="styleSheet">
-                  <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(213, 213, 213);
-border-top-left-radius</string>
-                 </property>
-                 <property name="text">
-                  <string>password</string>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QLineEdit" name="lineEdit">
+                <widget class="QLineEdit" name="login">
                  <property name="styleSheet">
                   <string notr="true">background-color: rgb(255, 255, 255);
 color: rgb(213, 213, 213);</string>
                  </property>
                  <property name="text">
+                  <string/>
+                 </property>
+                 <property name="placeholderText">
                   <string>login</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="password">
+                 <property name="styleSheet">
+                  <string notr="true">background-color: rgb(255, 255, 255);
+color: rgb(213, 213, 213);
+border-top-left-radius</string>
+                 </property>
+                 <property name="placeholderText">
+                  <string>password</string>
                  </property>
                 </widget>
                </item>
@@ -168,9 +174,15 @@ color: rgb(213, 213, 213);</string>
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButton">
+             <widget class="QPushButton" name="enter">
               <property name="styleSheet">
-               <string notr="true">background-color: rgb(255, 255, 255);</string>
+               <string notr="true">background-color: rgb(255, 255, 255);
+selection-background-color: rgb(142, 212, 255);
+selection-color: rgb(69, 72, 255);
+gridline-color: rgb(166, 255, 64);
+border-color: rgb(0, 0, 0);
+background-color: rgb(225, 225, 225);
+</string>
               </property>
               <property name="text">
                <string>Войти</string>
@@ -178,7 +190,7 @@ color: rgb(213, 213, 213);</string>
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButton_2">
+             <widget class="QPushButton" name="registration">
               <property name="styleSheet">
                <string notr="true">background-color: rgb(255, 255, 255);</string>
               </property>
@@ -226,6 +238,9 @@ color: rgb(213, 213, 213);</string>
           <spacer name="horizontalSpacer_2">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeType">
+            <enum>QSizePolicy::Fixed</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
