--- a/Data/Ui_files/Registration.ui
+++ b/Data/Ui_files/Registration.ui
@@ -32,7 +32,7 @@ background-color: rgba(0, 0, 0, 25);
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_4">
          <item>
-          <spacer name="horizontalSpacer">
+          <spacer name="spacer_h1">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
@@ -248,7 +248,7 @@ background-color: rgb(225, 225, 225);</string>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_5">
          <item>
-          <spacer name="horizontalSpacer_2">
+          <spacer name="pacl1">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
