--- a/Data/Ui_files/Registration.ui
+++ b/Data/Ui_files/Registration.ui
@@ -138,7 +138,7 @@ background-color: rgba(0, 0, 0, 25);
                 <widget class="QLineEdit" name="login">
                  <property name="styleSheet">
                   <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(213, 213, 213);</string>
+color: rgb(100, 100, 100);</string>
                  </property>
                  <property name="text">
                   <string/>
@@ -152,7 +152,7 @@ color: rgb(213, 213, 213);</string>
                 <widget class="QLineEdit" name="password">
                  <property name="styleSheet">
                   <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(213, 213, 213);
+color: rgb(100, 100, 100);
 border-top-left-radius</string>
                  </property>
                  <property name="placeholderText">
@@ -161,11 +161,12 @@ border-top-left-radius</string>
                 </widget>
                </item>
                <item>
-                <widget class="QLineEdit" name="lineEdit">
+                <widget class="QLineEdit" name="password1">
                  <property name="styleSheet">
-                  <string notr="true">color: rgb(213, 213, 213);</string>
+                  <string notr="true">background-color: rgb(255, 255, 255);
+                   color: rgb(100, 100, 100);</string>
                  </property>
-                 <property name="text">
+                 <property name="placeholderText">
                   <string>confirm the password</string>
                  </property>
                 </widget>
@@ -173,14 +174,14 @@ border-top-left-radius</string>
                <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_6">
                  <item>
-                  <widget class="QRadioButton" name="radioButton">
+                  <widget class="QRadioButton" name="M_radio">
                    <property name="text">
                     <string>М</string>
                    </property>
                   </widget>
                  </item>
                  <item>
-                  <widget class="QRadioButton" name="radioButton_2">
+                  <widget class="QRadioButton" name="F_radio">
                    <property name="text">
                     <string>Ж</string>
                    </property>
