--- a/Data/Ui_files/Profile.ui
+++ b/Data/Ui_files/Profile.ui
@@ -56,7 +56,7 @@
         <layout class="QHBoxLayout" name="horizontalLayout_3"/>
        </item>
        <item>
-        <widget class="QLabel" name="label_3">
+        <widget class="QLabel" name="shock_mode">
          <property name="font">
           <font>
            <pointsize>10</pointsize>
@@ -108,14 +108,14 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="change_avatar">
         <property name="text">
          <string>Изменить аватар</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="space_label_1">
         <property name="text">
          <string/>
         </property>
