--- a/Data/Ui_files/Profile.ui
+++ b/Data/Ui_files/Profile.ui
@@ -68,7 +68,26 @@
         </widget>
        </item>
        <item>
-        <widget class="QCalendarWidget" name="calendarWidget"/>
+        <widget class="QScrollArea" name="scrollArea">
+         <property name="widgetResizable">
+          <bool>true</bool>
+         </property>
+         <widget class="QWidget" name="scrollAreaWidgetContents">
+          <property name="geometry">
+           <rect>
+            <x>0</x>
+            <y>0</y>
+            <width>129</width>
+            <height>148</height>
+           </rect>
+          </property>
+          <layout class="QVBoxLayout" name="verticalLayout_3">
+           <item>
+            <widget class="QTableView" name="progress_table"/>
+           </item>
+          </layout>
+         </widget>
+        </widget>
        </item>
        <item>
         <spacer name="verticalSpacer">
@@ -156,7 +175,8 @@
     <addaction name="practise"/>
     <addaction name="game"/>
     <addaction name="meme"/>
-    <addaction name="action"/>
+    <addaction name="settings"/>
+    <addaction name="action_2"/>
    </widget>
    <addaction name="menu"/>
   </widget>
@@ -186,9 +206,14 @@
     <string>Мемы</string>
    </property>
   </action>
-  <action name="action">
+  <action name="settings">
    <property name="text">
     <string>Настройки</string>
+   </property>
+  </action>
+  <action name="action_2">
+   <property name="text">
+    <string>Выход</string>
    </property>
   </action>
  </widget>
