--- a/Data/Ui_files/Theory.ui
+++ b/Data/Ui_files/Theory.ui
@@ -158,7 +158,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="probability">
    <property name="text">
-    <string>Функция</string>
+    <string>Теория вероятности</string>
    </property>
   </action>
  </widget>
