--- a/Data/Ui_files/Enter.ui
+++ b/Data/Ui_files/Enter.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1079</width>
+    <width>999</width>
     <height>694</height>
    </rect>
   </property>
@@ -15,9 +15,7 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 0, 255);
-background-color: rgba(0, 0, 0, 25);
-    </string>
+    <string notr="true">background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:1, y2:0, stop:0 rgba(142, 84, 21, 255), stop:1 rgba(149, 60, 46, 255));</string>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
@@ -47,6 +45,19 @@ background-color: rgba(0, 0, 0, 25);
            </property>
           </spacer>
          </item>
+         <item>
+          <spacer name="horizontalSpacer_4">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
         </layout>
        </widget>
       </item>
@@ -66,7 +77,7 @@ background-color: rgba(0, 0, 0, 25);
         </property>
         <property name="styleSheet">
          <string notr="true">background-color: rgb(255, 255, 255);
-
+border-radius: 10px;
 </string>
         </property>
         <property name="frameShape">
@@ -108,7 +119,13 @@ background-color: rgba(0, 0, 0, 25);
                <string notr="true">color: rgb(0, 0, 0);</string>
               </property>
               <property name="text">
-               <string>Double E</string>
+               <string/>
+              </property>
+              <property name="pixmap">
+               <pixmap>../../../../Desktop/Instruments packs/My works/1x/Ресурс.png</pixmap>
+              </property>
+              <property name="scaledContents">
+               <bool>false</bool>
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
@@ -136,9 +153,21 @@ background-color: rgba(0, 0, 0, 25);
                </item>
                <item>
                 <widget class="QLineEdit" name="login">
+                 <property name="minimumSize">
+                  <size>
+                   <width>0</width>
+                   <height>40</height>
+                  </size>
+                 </property>
+                 <property name="font">
+                  <font>
+                   <pointsize>10</pointsize>
+                  </font>
+                 </property>
                  <property name="styleSheet">
-                  <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(213, 213, 213);</string>
+                  <string notr="true">background-color: rgba(0, 0, 0, 30);
+color: rgb(0, 0, 0);
+padding-left: 3px;</string>
                  </property>
                  <property name="text">
                   <string/>
@@ -150,10 +179,21 @@ color: rgb(213, 213, 213);</string>
                </item>
                <item>
                 <widget class="QLineEdit" name="password">
+                 <property name="minimumSize">
+                  <size>
+                   <width>0</width>
+                   <height>40</height>
+                  </size>
+                 </property>
+                 <property name="font">
+                  <font>
+                   <pointsize>10</pointsize>
+                  </font>
+                 </property>
                  <property name="styleSheet">
-                  <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(213, 213, 213);
-border-top-left-radius</string>
+                  <string notr="true">background-color: rgba(0, 0, 0, 30);
+color: rgb(0, 0, 0);
+padding-left: 3px;</string>
                  </property>
                  <property name="placeholderText">
                   <string>password</string>
@@ -175,13 +215,22 @@ border-top-left-radius</string>
             </item>
             <item>
              <widget class="QPushButton" name="enter">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>40</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <pointsize>10</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
               <property name="styleSheet">
-               <string notr="true">background-color: rgb(255, 255, 255);
-selection-background-color: rgb(142, 212, 255);
-selection-color: rgb(69, 72, 255);
-gridline-color: rgb(166, 255, 64);
-border-color: rgb(0, 0, 0);
-background-color: rgb(225, 225, 225);
+               <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(153, 41, 234, 255), stop:1 rgba(88, 8, 251, 255));
+color: rgb(255, 255, 255);
 </string>
               </property>
               <property name="text">
@@ -191,8 +240,19 @@ background-color: rgb(225, 225, 225);
             </item>
             <item>
              <widget class="QPushButton" name="registration">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>40</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <pointsize>10</pointsize>
+               </font>
+              </property>
               <property name="styleSheet">
-               <string notr="true">background-color: rgb(255, 255, 255);</string>
+               <string notr="true">background-color: rgb(240, 240, 240);</string>
               </property>
               <property name="text">
                <string>Регистрация</string>
@@ -201,6 +261,20 @@ background-color: rgb(225, 225, 225);
             </item>
             <item>
              <widget class="QPushButton" name="server_config">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>40</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <pointsize>10</pointsize>
+               </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: rgb(240, 240, 240);</string>
+              </property>
               <property name="text">
                <string>Изменить ip сервера</string>
               </property>
@@ -241,6 +315,19 @@ background-color: rgb(225, 225, 225);
          <enum>QFrame::Raised</enum>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_5">
+         <item>
+          <spacer name="horizontalSpacer_3">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
          <item>
           <spacer name="horizontalSpacer_2">
            <property name="orientation">
