--- a/Data/Ui_files/Profile.ui
+++ b/Data/Ui_files/Profile.ui
@@ -14,6 +14,9 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true">background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:1, y2:0, stop:0 rgba(142, 84, 21, 255), stop:1 rgba(149, 60, 46, 255));</string>
+   </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <spacer name="horizontalSpacer">
@@ -39,10 +42,25 @@
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QLabel" name="name">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>30</height>
+          </size>
+         </property>
          <property name="font">
           <font>
-           <pointsize>10</pointsize>
+           <pointsize>12</pointsize>
+           <weight>75</weight>
+           <italic>false</italic>
+           <bold>true</bold>
           </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 255, 255);
+background-color: rgba(0, 0, 0, 50);
+border-radius: 10px;
+padding-left: 3px;</string>
          </property>
          <property name="text">
           <string>Имя</string>
@@ -60,7 +78,14 @@
          <property name="font">
           <font>
            <pointsize>10</pointsize>
+           <italic>false</italic>
+           <underline>false</underline>
+           <strikeout>false</strikeout>
+           <kerning>true</kerning>
           </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 255, 255);</string>
          </property>
          <property name="text">
           <string>Ударный режим:</string>
@@ -69,6 +94,10 @@
        </item>
        <item>
         <widget class="QScrollArea" name="scrollArea">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgba(255, 255, 255, 50);
+border-radius: 10px;</string>
+         </property>
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
@@ -83,7 +112,11 @@
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
            <item>
-            <widget class="QTableView" name="progress_table"/>
+            <widget class="QTableView" name="progress_table">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(255, 255, 255);</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -128,6 +161,24 @@
       </item>
       <item>
        <widget class="QPushButton" name="change_avatar">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>8</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgba(255, 255, 255, 100);
+color: rgb(255, 255, 255);
+border-radius: 10px;</string>
+        </property>
         <property name="text">
          <string>Изменить аватар</string>
         </property>
@@ -177,7 +228,6 @@
    </widget>
    <addaction name="menu"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
   <action name="profile">
    <property name="text">
     <string>Профиль</string>
