--- a/Data/Ui_files/Theory.ui
+++ b/Data/Ui_files/Theory.ui
@@ -161,6 +161,8 @@ p, li { white-space: pre-wrap; }
      <string>Темы</string>
     </property>
     <addaction name="probability"/>
+    <addaction name="planimetry"/>
+    <addaction name="movement"/>
    </widget>
    <addaction name="menu"/>
    <addaction name="menu_2"/>
@@ -193,6 +195,16 @@ p, li { white-space: pre-wrap; }
   <action name="probability">
    <property name="text">
     <string>Теория вероятности</string>
+   </property>
+  </action>
+  <action name="planimetry">
+   <property name="text">
+    <string>Планиметрия</string>
+   </property>
+  </action>
+  <action name="movement">
+   <property name="text">
+    <string>Задачи на движение</string>
    </property>
   </action>
  </widget>
