--- a/Data/Ui_files/Enter.ui
+++ b/Data/Ui_files/Enter.ui
@@ -122,7 +122,7 @@ border-radius: 10px;
                <string/>
               </property>
               <property name="pixmap">
-               <pixmap>../../../../Desktop/Instruments packs/My works/1x/Ресурс.png</pixmap>
+               <pixmap>../Images/DoubleE.png</pixmap>
               </property>
               <property name="scaledContents">
                <bool>false</bool>
